<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.DriveFragment">

    <LinearLayout android:id="@+id/linearDriveStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="156dp"
                android:layout_height="156dp">

                <ImageView
                    android:id="@+id/imageCar"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:background="@drawable/vehicle_badge_background"
                    android:contentDescription="@string/car_colored_with_status"
                    android:padding="24dp"
                    android:src="@drawable/ic_directions_car_white_24dp"
                    app:tint="@color/driveGreen" />

                <ImageView
                    android:id="@+id/imageDriveStatus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="10dp"
                    android:background="@drawable/status_badge_background"
                    android:contentDescription="@string/drive_status_symbol"
                    android:padding="10dp"
                    android:src="@drawable/ic_forbidden_white_24dp"
                    app:tint="@color/driveRed" />
            </FrameLayout>

            <TextView
                android:id="@+id/textViewDriveStatusLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_sm"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:text="@string/do_not_drive"
                android:textColor="@color/driveRed"
                android:textSize="19sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearStatusDatas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:background="@drawable/drink_item_background"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_sm"
            android:paddingBottom="@dimen/spacing_sm"
            android:paddingStart="@dimen/spacing_sm">


            <LinearLayout
                android:id="@+id/linearAlcoholRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/spacing_xs"
                android:gravity="start|center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/alcohol_blood_rate"
                    android:src="@drawable/ic_blood_drop_plain" />

                <TextView
                    android:id="@+id/textViewAlcoholRate"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_alcohol_rate_example_text"
                    android:textColor="@color/driveAmber"
                        android:textSize="21sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearProjectedPeak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xs"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/alcohol_blood_rate"
                    android:src="@drawable/ic_warning_white_24dp"
                    app:tint="@color/driveAmber" />

                <TextView
                    android:id="@+id/textViewPeakRate"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_alcohol_rate_example_text"
                    android:textColor="@color/driveAmber"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearProjectionDrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xs"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/time_to_wait"
                    android:src="@drawable/ic_update_white_24dp"
                    app:tint="@color/driveAmber" />

                <TextView
                    android:id="@+id/textViewProjectionDrive"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_time_example_text"
                    android:textColor="@color/driveAmber"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearProjectionSober"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xs"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/time_to_wait"
                    android:src="@drawable/ic_update_white_24dp"
                    app:tint="@color/driveGreen" />

                <TextView
                    android:id="@+id/textViewProjectionSober"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_time_example_text"
                    android:textColor="@color/driveGreen"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/includeFoodState"
        layout="@layout/include_food_state_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearDriveStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/includeFoodState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <include layout="@layout/constraint_content_drive_history" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_white_24dp"
        android:contentDescription="@string/content_desc_add_drink"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonToDrinker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_white_24dp"
        android:contentDescription="@string/content_desc_profile"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>