...
            android:layout_marginTop="@dimen/spacing_sm"
            android:hint="@string/weight"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="yes"
                android:inputType="numberDecimal"
                android:minEms="4"
                android:textAlignment="center" />
...
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:orientation="vertical">
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"

                />
            <com.google.android.material.radiobutton.MaterialRadioButton
...
