...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonValidateDrinker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_white_24dp"
        android:contentDescription="@string/content_desc_validate"
        android:layout_margin="@dimen/spacing_xl"
        app:layout_constraintEnd_toEndOf="parent"
...
